changed image url

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <body style="font-family: Verdana, sans-serif;" onload="init();">
         <center>
             <h1>Enter PIN</h1>
-            <img src="pin.png" class="wide">
+            <img src="https://github.com/interruptjs/interruptjs/raw/master/pin.png" class="wide">
             <br />
             <input type="button" id="stopbtn" value="Start" class="wide btn" />
             <br>
